<resources>
	<string name="app_name">Calculate</string>
	<string name="butoon_0">0</string>
	<string name="button_1">1</string>
	<string name="button_2">2</string>
	<string name="button_3">3</string>
	<string name="button_4">4</string>
	<string name="button_5">5</string>
	<string name="button_6">6</string>
	<string name="button_7">7</string>
	<string name="button_8">8</string>
	<string name="button_9">9</string>
	<string name="button_c">c</string>
	<string name="button_del">Del</string>
	<string name="button_except">/</string>
	<string name="button_Multiply">*</string>
	<string name="button_node">.</string>
	<string name="button_add">+</string>
	<string name="button_sum">=</string>
	<string name="button_subtraction">-</string>
	<string name="button_percentage">%</string>
	<string name="button_square">x^2</string>
	<string name="button_rooting">^2</string>
	<string name="button_fenzhi">1/x</string>
	<string name="button_sin">Sin</string>
	<string name="button_cos">Cos</string>
	<string name="Button_Left_Brackets">(</string>
	<string name="Button_Right_Brackets">)</string>
	<string name="input">Input</string>
	<string name="title_activity_long_activity">Long_activity</string>
</resources>
