<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="7"
            android:columnCount="4">
	<TextView
			android:id="@+id/Show"
			android:textSize="30dp"
			android:layout_width="match_parent"
			android:layout_height="200dp"
			android:layout_columnSpan="4"
			android:hint="0"
			android:gravity="bottom|end"/>
	<Button
			android:id="@+id/Button_c"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:text="@string/button_c"
			android:onClick="onClick_Symbol"
			android:layout_columnSpan="2"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1"/>
	
	<Button
			android:id="@+id/Button_Percentage"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:text="@string/button_percentage"
			android:onClick="onClick_Function"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1"/>
	
	<Button
			android:id="@+id/button_Except"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:text="@string/button_except"
			android:onClick="onClick_Calculation"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1"/>
	
	<Button
			android:id="@+id/Button_Left_Brackets"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:text="@string/Button_Left_Brackets"
			android:onClick="onClick_Symbol"
			android:layout_columnSpan="2"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1"/>
	
	<Button
			android:id="@+id/Button_Right_Brackets"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:text="@string/Button_Right_Brackets"
			android:onClick="onClick_Symbol"
			android:layout_columnSpan="2"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1"/>
	
	<Button
			android:id="@+id/button_Square"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:text="@string/button_square"
			android:onClick="onClick_Function"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1"/>
	
	<Button
			android:id="@+id/button_Rooting"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:text="@string/button_rooting"
			android:onClick="onClick_Function"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1"/>
	
	<Button
			android:id="@+id/button_Fenzhi"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:text="@string/button_fenzhi"
			android:onClick="onClick_Function"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1"/>
	
	<Button
			android:id="@+id/Multiply"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:text="@string/button_Multiply"
			android:onClick="onClick_Calculation"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1"/>
	<Button
			android:id="@+id/Button_7"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:text="@string/button_7"
			android:onClick="onClick_Number"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1"/>
	<Button
			android:id="@+id/Button_8"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:text="@string/button_8"
			android:onClick="onClick_Number"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1"/>
	<Button
			android:id="@+id/Button_9"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:text="@string/button_9"
			android:onClick="onClick_Number"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1"/>
	<Button
			android:id="@+id/Button_Subtraction"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:text="@string/button_subtraction"
			android:onClick="onClick_Calculation"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1"/>
	<Button
			android:id="@+id/Button_4"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:text="@string/button_4"
			android:onClick="onClick_Number"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1"/>
	<Button
			android:id="@+id/Button_5"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:text="@string/button_5"
			android:onClick="onClick_Number"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1"/>
	<Button
			android:id="@+id/Button_6"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:text="@string/button_6"
			android:onClick="onClick_Number"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1"/>
	<Button
			android:id="@+id/Button_add"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:text="@string/button_add"
			android:onClick="onClick_Calculation"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1"/>
	<Button
			android:id="@+id/Button_1"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:text="@string/button_1"
			android:onClick="onClick_Number"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1"/>
	<Button
			android:id="@+id/Button_2"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:text="@string/button_2"
			android:onClick="onClick_Number"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1"/>
	<Button
			android:id="@+id/Button_3"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:text="@string/button_3"
			android:onClick="onClick_Number"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1"/>
	<Button
			android:id="@+id/Button_sum"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:text="@string/button_sum"
			android:onClick="onClick_Symbol"
			android:layout_columnWeight="1"
			android:layout_rowSpan="2"
			android:layout_rowWeight="1"/>
	<Button
			android:id="@+id/Button_0"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:text="@string/butoon_0"
			android:onClick="onClick_Number"
			android:layout_columnWeight="1"
			android:layout_columnSpan="2"
			android:layout_rowWeight="1"/>
	<Button
			android:id="@+id/Button_Point"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:text="@string/button_node"
			android:onClick="onClick_Symbol"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1"/>

</GridLayout>